updated mobile rendering layout and functionality to be more consistent and functional

--- a/data_technology.html
+++ b/data_technology.html
@@ -129,6 +129,46 @@
     .img-cover{ width:100%; height:100%; object-fit:cover; }
     /* === MOBILE-ONLY ADJUSTMENTS (match Growth & Engagement behaviour) === */
     @media (max-width:640px){
+      /* Mobile dropdown/menu styling — match growth_and_engagement.html mobile appearance */
+      #mobile-menu{ padding:8px 0; }
+      #mobile-menu .max-w-6xl{
+        width:calc(100% - 32px);
+        max-width:640px;
+        margin:8px auto;
+        background:#f5f5f5;
+        border:1px solid rgba(133,96,66,.2);
+        border-radius:12px;
+        box-shadow:0 10px 25px rgba(0,0,0,.09);
+        padding:10px;
+      }
+      /* make each link a large, tappable item with hover/focus states like desktop .dropdown-item */
+      #mobile-menu a{
+        display:block;
+        padding:12px 14px;
+        margin:6px 0;
+        color:#856042;
+        text-decoration:none;
+        border-radius:8px;
+        font-weight:600;
+        font-size:15px;
+        transition:background-color .15s ease, color .15s ease, border-color .15s ease;
+        border:1px solid transparent;
+        background:transparent;
+      }
+      #mobile-menu a:hover,
+      #mobile-menu a:focus{
+        background-color:#568a99;
+        color:#f5f5f5;
+        border-color:#446c77;
+        outline:none;
+      }
+      /* slightly smaller and indented for the sub-items that live inside the .pl-3 wrapper */
+      #mobile-menu .pl-3 a{
+        padding-left:22px;
+        font-size:14px;
+        opacity:.95;
+      }
+
       /* Make each full section fill the small viewport and start below the fixed header */
       section.full{
         height: 100svh !important;
@@ -172,6 +212,16 @@
         overflow: visible !important;
         padding-bottom: 0 !important;
       }
+      /* Mobile: responsive, slightly smaller text inside the reveal textbox so it fits better on small screens */
+      #dt-hero #reveal-panel h3{
+        font-size: clamp(0.8rem, 3.6vw, 0.95rem) !important;
+        line-height: 1.05 !important;
+      }
+      #dt-hero #reveal-panel p{
+        font-size: clamp(0.72rem, 2.6vw, 0.85rem) !important;
+        margin-top: .35rem !important;
+        line-height: 1.2 !important;
+      }
       /* Make each tab take roughly a third of the available width so three fit without scrolling */
       #dt-hero [role="tablist"] > .tab{
         flex: 0 0 calc((100% - 1rem) / 3) !important;
@@ -188,7 +238,7 @@
 <body class="overflow-x-hidden">
 
   <!-- NAV -->
-  <nav id="site-nav" class="fixed top-0 left-0 w-full bg-paper/90 border-b border-dark-brown/20 z-50 h-16">
+  <nav class="fixed top-0 left-0 w-full bg-paper/90 border-b border-dark-brown/20 z-50 h-16">
     <div class="max-w-6xl mx-auto px-4 h-16 flex justify-between items-center">
       <a href="index.html#hero" class="text-base md:text-lg font-bold text-dark-brown hover:text-primary transition">Home</a>
       <div class="hidden md:flex items-center gap-6 text-sm font-semibold">
@@ -201,19 +251,22 @@
           </div>
         </div>
         <div class="dropdown">
-          <a href="index.html#services" class="nav-link text-dark-brown hover:text-primary transition">Services</a>
+          <a href="index.html#services" class="text-dark-brown hover:text-primary transition">Services</a>
           <div class="dropdown-menu">
             <a href="growth_and_engagement.html" class="dropdown-item">Growth & Engagement</a>
             <a href="data_technology.html" class="dropdown-item">Data & Technology</a>
             <a href="operations_systems.html" class="dropdown-item">Operations & Systems</a>
           </div>
         </div>
-        <a href="index.html#contact" class="nav-link text-dark-brown hover:text-primary">Contact Us</a>
+        <a href="index.html#contact" class="text-dark-brown hover:text-primary">Contact Us</a>
       </div>
       
       <!-- Mobile button (matches index.html) -->
       <button id="menu-toggle" class="md:hidden inline-flex items-center justify-center rounded-md border border-dark-brown/30 px-3 py-2 text-dark-brown">
-        <span class="sr-only">Open menu</span>☰
+        <span class="sr-only">Open menu</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
       </button>
     </div>
 
@@ -436,6 +489,12 @@
       tab.addEventListener('mouseenter', open);
       tab.addEventListener('focus', open);
       tab.addEventListener('click', open);
+      // Support touch devices: use pointerdown/touchstart to ensure immediate response on touch
+      if (window.PointerEvent) {
+        tab.addEventListener('pointerdown', (e)=>{ if(e.pointerType === 'touch') open(); });
+      } else {
+        tab.addEventListener('touchstart', open);
+      }
       tab.addEventListener('mouseleave', ()=> scheduleHideAll());
     });
 
@@ -463,7 +522,7 @@
     // Ensure panels are hidden on initial load (no white panel visible until interaction)
     hideAllPanels();
   </script>
-  <!-- Mobile menu open/close + auto-close on selection/hash change (copied from index.html) -->
+  <!-- Mobile menu open/close + auto-close on selection/hash change (match growth_and_engagement.html) -->
   <script>
     (function(){
       const btn = document.getElementById('menu-toggle');
