changed recipient of contact form to company domain email

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
       <!--
       <div class="mt-5 w-full max-w-md mx-auto"><img src="assets/mountain-divider.svg" alt="" class="mx-auto opacity-70"></div>
       -->
-      <p class="mt-5 text-dark-grey">Get in touch by <a href="mailto:customersupport@muroservices.com" class="text-primary underline">email</a> or using the form below.</p>
+      <p class="mt-5 text-dark-grey">Get in touch by <a href="mailto:info@muroservices.com" class="text-primary underline">email</a> or using the form below.</p>
       <form id="contact-form" class="mt-6 text-left space-y-4 max-w-xl mx-auto" novalidate>
         <input id="name" type="text" name="name" placeholder="Your Name" required class="w-full p-3 border border-dark-brown/40 rounded bg-white text-dark-brown"/>
         <input id="email" type="email" name="_replyto" placeholder="Your Email" required class="w-full p-3 border border-dark-brown/40 rounded bg-white text-dark-brown"/>
