updated client feed back button to say testimonials

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               </svg>
             </a>
             <a href="#testimonials" class="inline-flex items-center justify-center bg-paper text-dark-brown font-semibold px-6 py-3 rounded-lg border-2 border-primary hover:bg-primary hover:text-paper transition active:scale-[.99] shadow-lg">
-              <span>Client Feedback</span>
+              <span>Testimonials</span>
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
               </svg>
